--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
-  "name": "tekshila-frontend",
-  "version": "2.0.0",
-  "description": "Modern web frontend for Tekshila - AI-powered code documentation tool",
-  "main": "index.html",
+  "name": "tekshila-prism",
+  "version": "3.0.0",
+  "description": "Tekshila - Cinematic Engineering SaaS with Refracted Intelligence design system",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "serve": "vite preview --port 3000",
-    "api": "python api_bridge.py",
-    "start": "concurrently \"npm run api\" \"npm run dev\"",
-    "start:prod": "concurrently \"npm run api\" \"npm run serve\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "api": "python api_bridge.py"
   },
-  "keywords": [
-    "ai",
-    "documentation",
-    "code-analysis",
-    "github",
-    "frontend"
-  ],
-  "author": "Tekshila Team",
-  "license": "MIT",
+  "dependencies": {
+    "next": "^15.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "framer-motion": "^11.0.0",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.15.0",
+    "@react-three/drei": "^9.92.0",
+    "@types/three": "^0.160.0",
+    "use-sound": "^4.0.1",
+    "@tanstack/react-query": "^5.17.0",
+    "better-auth": "^0.1.0",
+    "lucide-react": "^0.303.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
+  },
   "devDependencies": {
-    "concurrently": "^9.2.0",
-    "vite": "^7.0.4"
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^15.0.0"
   }
 }
